test_suite/tests/errors/max_iter_zero.rs
use banish::banish;

fn main() {
    banish! {
        #[max_iter = 0]
        @foo
            done? { return; }
    }
}
