test_suite/tests/errors/max_iter_zero.stderr
error: `max_iter` value must be greater than zero
 --> tests/errors/max_iter_zero.rs:5:22
  |
5 |         #[max_iter = 0]
  |                      ^
